message Command_UpdateServerMessage {
}

message Command_ShutdownServer {
	optional string reason = 1;
	optional uint32 minutes = 2;
}

message AdminCommand {
	enum AdminCommandType {
		UPDATE_SERVER_MESSAGE = 1000;
		SHUTDOWN_SERVER = 1001;
	}
	extensions 100 to max;
}

extend AdminCommand {
	optional Command_UpdateServerMessage command_update_server_message = 1000;
	optional Command_ShutdownServer command_shutdown_server = 1001;
}
 
